# bigfive-rust

./: .gitignore  Makefile
.github/workflows/: build.yml
backend/: Cargo.toml
backend/migrations/: 20250413000001_create_tests_table.sql  20250413000002_create_feedback_table.sql
backend/src/: data.rs  db.rs  lib.rs  main.rs  models.rs  results.rs  score.rs  server.rs
backend/src/data/questions/: ar.json  bg.json  ca.json  cs.json  da.json  de.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  he.json  hi.json  hr.json  hu.json  hy.json  id.json  is.json  it.json  ja.json  ko.json  nl.json  no.json  pl.json  pt-br.json  ro.json  ru.json  sl.json  sq.json  sr.json  ss.json  sv.json  th.json  tr.json  uk.json  ur.json  zh-cn.json  zh-hk.json
backend/src/data/results/: it.json  ja.json  ro.json  zh-cn.json
backend/src/routes/: feedback.rs  health.rs  languages.rs  mod.rs  questions.rs  tests.rs
backend/tests/: integration.rs
frontend/: index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
frontend/public/: articles.json
frontend/public/messages/: ar.json  da.json  de.json  en.json  es.json  fi.json  fr.json  hi.json  id.json  is.json  it.json  ja.json  no.json  pl.json  pt.json  ru.json  sv.json  th.json  uk.json  (+1 more)
frontend/src/: App.vue  api.spec.ts  api.ts  i18n.ts  main.ts  router.ts  types.ts  vite-env.d.ts
scripts/: build-windows-portable.cmd  build-windows-portable.ps1  migrate-articles.js  migrate-messages.js  migrate-questions.js  migrate-results.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+22 files in other folders)
